# traditional_rag_implementation

./: Commands_to_execute_for_uv.txt  main.py  pyproject.toml
Notebook/: chatbot.py  data_loader.py  embedding.py  search.py  vectorstore.py
faiss_store/: faiss.index  metadata.pkl
